packages/otupy/otupy-1.1.12.tar.gz/otupy-1.1.12/validation/openc2-cbor-samples/tests/responses/bad/query_features_all_badprofile.cbor
£fstatusÈkstatus_textbOKgresults£hversionsq1.0-draft-2019-02hprofileskmyextensionepairs¥equeryhfeaturesddenydfileeallow‚dfilefdeviceiremediatedfilegcontainfdevice